fixed z-indexes, made plan - better late than never, function for game over

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   height: 48px;
   cursor: pointer;
   outline: 1px solid black;
+  z-index: 2;
 }
 
 .end-game-screen {
@@ -21,7 +22,7 @@ body {
   width: 481px;
   grid-column: 1;
   grid-row: 1;
-  z-index: 1;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,7 +55,7 @@ body {
   flex-wrap: wrap;
   grid-column: 1;
   grid-row: 1;
-  z-index: 2;
+  z-index: 1;
 }
 
 .hidden {
@@ -85,4 +86,8 @@ body {
 
 .cell-clicked {
   background-color: blue;
+}
+
+.cell-clicked-bomb {
+  background-color: red;
 }
